fix z-index on borders

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,7 @@ body {
   background: #f1f1f1;
   top: 0;
   left: 0;
+  z-index: 999999;
 }
 
 .border-bottom {
@@ -80,6 +81,7 @@ body {
   background: #f1f1f1;
   bottom: 0;
   left: 0;
+  z-index: 999999;
 }
 
 .border-left {
@@ -89,6 +91,7 @@ body {
   background: #f1f1f1;
   top: 0;
   left: 0;
+  z-index: 999999;
 }
 
 .border-right {
@@ -98,6 +101,7 @@ body {
   background: #f1f1f1;
   top: 0;
   right: 0;
+  z-index: 999999;
 }
 
 .page {
